--- a/moderator/_/index.html
+++ b/moderator/_/index.html
@@ -15,7 +15,7 @@
         </a>
 
         <nav>
-          <a href="#teams">
+          <div href="#teams">
             <div class="nav-list">
               <img
                 src="./images/users-643ddc64cb0f826743e01e79f4ccf6ae.svg"
@@ -23,8 +23,8 @@
               />
             </div>
             <span class="title">Teams List</span>
-          </a>
-          <a href="#services">
+          </div>
+          <div href="#services">
             <div class="nav-list">
               <img
                 src="./images/incandescent-light-bulb-svgrepo-com.svg
@@ -33,8 +33,8 @@
               />
             </div>
             <span class="title">Service List</span>
-          </a>
-          <a href="#faqs">
+          </div>
+          <div href="#faqs">
             <div class="nav-list">
               <img
                 src="./images/question-mark-inside-square-svgrepo-com.svg"
@@ -42,8 +42,8 @@
               />
             </div>
             <span class="title">FAQs</span>
-          </a>
-          <a href="#request-form">
+          </div>
+          <div href="#request-form">
             <div class="nav-list">
               <img
                 src="./images/message-box-d026fb49c2f49d0bae1755f997af409d.svg"
@@ -51,7 +51,7 @@
               />
             </div>
             <span class="title">Submitted Request Form</span>
-          </a>
+          </div>
         </nav>
       </div>
       <section>
@@ -147,112 +147,7 @@
             </div>
 
             <div class="team-listing">
-              <ul class="faqs">
-                <li class="faq">
-                  <h3>What services does Tech-lot provide?</h3>
-                  <p>
-                    <b>Answer:</b> Tech-lot provides a range of technology
-                    solutions including software development, IT consulting,
-                    cloud computing, cybersecurity, data analytics, and more.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>How experienced is Tech-lot's team of experts?</h3>
-                  <p>
-                    <b>Answer:</b> Tech-lot's team of experts has extensive
-                    experience in their respective fields and many hold advanced
-                    degrees in computer science, information technology, and
-                    related fields.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>
-                    How can Tech-lot help improve my company's technology
-                    infrastructure?
-                  </h3>
-                  <p>
-                    <b>Answer:</b> Tech-lot can assess your company's current
-                    technology infrastructure and develop customized solutions
-                    that can help improve efficiency, reduce costs, and increase
-                    security.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>
-                    What is the process for working with Tech-lot on a
-                    technology project?
-                  </h3>
-                  <p>
-                    <b>Answer:</b> The process for working with Tech-lot
-                    typically involves an initial consultation to assess your
-                    needs, followed by a proposal outlining the scope of the
-                    project, timeline, and costs. Once approved, the project is
-                    developed and delivered according to the agreed-upon terms.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>
-                    Does Tech-lot provide ongoing maintenance and support
-                    services?
-                  </h3>
-                  <p>
-                    <b>Answer:</b> Yes, Tech-lot provides ongoing maintenance
-                    and support services to ensure that your technology systems
-                    remain up-to-date and secure.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>
-                    How does Tech-lot ensure the security of my company's data
-                    and technology systems?
-                  </h3>
-                  <p>
-                    <b>Answer:</b> Tech-lot follows industry-standard best
-                    practices for data security and employs the latest security
-                    technologies to ensure the safety of your data and
-                    technology systems.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>Can Tech-lot help with software development projects?</h3>
-                  <p>
-                    <b>Answer:</b> Yes, Tech-lot provides full-stack software
-                    development services and can develop customized solutions
-                    for clients with unique needs.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>What industries does Tech-lot specialize in serving?</h3>
-                  <p>
-                    <b>Answer:</b> Tech-lot specializes in serving a range of
-                    industries including healthcare, finance, education,
-                    government, and more.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>
-                    How does Tech-lot stay up-to-date on the latest technology
-                    trends and advancements?
-                  </h3>
-                  <p>
-                    <b>Answer:</b> Tech-lot's team members participate in
-                    ongoing training and professional development programs to
-                    stay up-to-date on the latest technology trends and
-                    advancements.
-                  </p>
-                </li>
-                <li class="faq">
-                  <h3>
-                    Does Tech-lot offer customized solutions for clients with
-                    unique technology needs?
-                  </h3>
-                  <p>
-                    <b>Answer:</b> Yes, Tech-lot specializes in providing
-                    customized technology solutions tailored to the unique needs
-                    of each client.
-                  </p>
-                </li>
-              </ul>
+              <ul class="faqs"></ul>
             </div>
 
             <div class="form-board add-faq">
@@ -293,7 +188,110 @@
           </div>
 
           <div class="board" id="request-form">
-            <h1>REQUEST/COMPLAINT FORM</h1>
+            <div class="board-head">
+              <h3>REQUEST/COMPLAINT FORM</h3>
+            </div>
+
+            <div class="team-listing">
+              <ul class="randc-form-list">
+                <li>
+                  <div class="randc-head">
+                    <span class="cust-name">Alawiye Muritala</span>
+                    <span class="cust-company"
+                      ><b><i>Emperor Designs</i></b></span
+                    >
+                    <div class="randc-contact">
+                      <a href="tel:23490590824617" title="Call Alawiye Muritala"
+                        >Call</a
+                      >
+                      <a
+                        href="mailto:naijabayz@gmail.com"
+                        title="Send mail to Alawiye Muritala"
+                        >Send Mail</a
+                      >
+                    </div>
+                  </div>
+                  <div class="hidden-info">
+                    <span class="randc-tag"
+                      >Form for: <b>Embedded Expertise</b></span
+                    >
+                    <span class="rand-id"
+                      >Form ID: <b>20EoXusj92jD2830ES87</b></span
+                    >
+                  </div>
+                  <div class="randc-message">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur facere temporibus iste vero illum quaerat
+                    molestias sequi, vitae, sed vel dignissimos, eum ratione
+                    maiores quos provident maxime accusantium officia inventore.
+                  </div>
+                </li>
+                <li>
+                  <div class="randc-head">
+                    <span class="cust-name">Alawiye Muritala</span>
+                    <span class="cust-company"
+                      ><b><i>Emperor Designs</i></b></span
+                    >
+                    <div class="randc-contact">
+                      <a href="tel:23490590824617" title="Call Alawiye Muritala"
+                        >Call</a
+                      >
+                      <a
+                        href="mailto:naijabayz@gmail.com"
+                        title="Send mail to Alawiye Muritala"
+                        >Send Mail</a
+                      >
+                    </div>
+                  </div>
+                  <div class="hidden-info">
+                    <span class="randc-tag"
+                      >Form for: <b>Embedded Expertise</b></span
+                    >
+                    <span class="rand-id"
+                      >Form ID: <b>20EoXusj92jD2830ES87</b></span
+                    >
+                  </div>
+                  <div class="randc-message">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur facere temporibus iste vero illum quaerat
+                    molestias sequi, vitae, sed vel dignissimos, eum ratione
+                    maiores quos provident maxime accusantium officia inventore.
+                  </div>
+                </li>
+                <li>
+                  <div class="randc-head">
+                    <span class="cust-name">Alawiye Muritala</span>
+                    <span class="cust-company"
+                      ><b><i>Emperor Designs</i></b></span
+                    >
+                    <div class="randc-contact">
+                      <a href="tel:23490590824617" title="Call Alawiye Muritala"
+                        >Call</a
+                      >
+                      <a
+                        href="mailto:naijabayz@gmail.com"
+                        title="Send mail to Alawiye Muritala"
+                        >Send Mail</a
+                      >
+                    </div>
+                  </div>
+                  <div class="hidden-info">
+                    <span class="randc-tag"
+                      >Form for: <b>Embedded Expertise</b></span
+                    >
+                    <span class="randc-id"
+                      >Form ID: <b>20EoXusj92jD2830ES87</b></span
+                    >
+                  </div>
+                  <div class="randc-message">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur facere temporibus iste vero illum quaerat
+                    molestias sequi, vitae, sed vel dignissimos, eum ratione
+                    maiores quos provident maxime accusantium officia inventore.
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -325,6 +323,7 @@
     const app = initializeApp(firebaseConfig);
     let teamAPI = "";
     let faqAPI = "";
+    let requestAPI = "";
 
     import {
       getDatabase,
@@ -487,6 +486,44 @@
       });
     }
 
+    // ====== display request after calling =======
+    function fetchDemoRequest() {
+      const requestBoard = document.querySelector(".randc-form-list");
+      requestAPI.forEach((tm, index) => {
+        requestBoard.innerHTML += `
+                <li>
+                  <div class="randc-head">
+                    <span class="cust-name">${tm.customerName}</span>
+                    <span class="cust-company"
+                      ><b><i>${tm.customerCompanyName}</i></b></span
+                    >
+                    <div class="randc-contact">
+                      <a href="tel:${tm.customerPhoneNumber}" title="Call ${tm.customerName}"
+                        >Call</a
+                      >
+                      <a
+                        href="mailto:${tm.customerEmail}"
+                        title="Send mail to ${tm.customerName}"
+                        >Send Mail</a
+                      >
+                    </div>
+                  </div>
+                  <div class="hidden-info">
+                    <span class="randc-tag"
+                      >Form for: <b>${tm.requestService}</b></span
+                    >
+                    <span class="randc-id"
+                      >Form ID: <b>${tm.id}</b></span
+                    >
+                  </div>
+                  <div class="randc-message">
+                    ${tm.customerMessage}
+                  </div>
+                </li>
+      `;
+      });
+    }
+
     // ========================= Begining of getting Team Members ================================ //
 
     function getTeamMember() {
@@ -545,6 +582,35 @@
         });
     }
     getFaqQuestion();
+
+    // ========================= Begining of getting request form from database ================================ //
+
+    function getRequestForm() {
+      const requestBoard = document.querySelector(".randc-form-list");
+      const database = getDatabase();
+      const dataRef = databaseRef(database, "RequestForm/");
+
+      get(dataRef)
+        .then((snapshot) => {
+          if (snapshot.exists()) {
+            let requestAPIs = snapshot.val();
+            requestBoard.innerHTML = "";
+            requestAPI = [];
+            for (let request in requestAPIs) {
+              // console.log(request);
+              let tm = requestAPIs[request];
+              requestAPI.push(tm);
+            }
+            fetchDemoRequest();
+          } else {
+            alert("No request form available");
+          }
+        })
+        .catch((error) => {
+          console.error(error);
+        });
+    }
+    getRequestForm();
 
     // ========== deleting from database ============remFaqQuestion
 
