--- a/search/index.html
+++ b/search/index.html
@@ -27,7 +27,7 @@
           <a href="/">
             <li class="link">Services</li>
           </a>
-          <a href="#contact">
+          <a href="../#contact">
             <li class="link">Contact</li>
           </a>
         </ul>
@@ -57,7 +57,7 @@
         <a href="/">
           <li class="link-mobile active">Services</li>
         </a>
-        <a href="#contact">
+        <a href="../#contact">
           <li class="link-mobile">Contact</li>
         </a>
       </ul>
