--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="./service">
             <li class="link">Services</li>
           </a>
-          <a href="./contact">
+          <a href="#contact">
             <li class="link">Contact</li>
           </a>
         </ul>
